# tree-sitter-cabal

./: .gitignore  CMakeLists.txt  Makefile  README.md  README.org  flake.nix  go.mod  grammar.js  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  setup.py  tree-sitter.json
.github/: dependabot.yml
.github/workflows/: dependabot-automerge.yml  test.yml
bindings/c/: tree-sitter-cabal.pc.in
bindings/go/: binding.go  binding_test.go
common/: recipes.just  utils.mjs
common/grammar/: haskell.mjs  soup.mjs
scanner/: scanner.c
src/: grammar.json  node-types.json  parser.c
test/: bench-corpus.sh  cabal-files.sh  cabal-project-files.sh  find-corpus.sh  flamegraph-corpus.sh  gen-corpus.sh  ghc-cmm-files.sh  ghc-core-files.sh  ghc-dump-files.sh  ghc-stg-files.sh  parse-cabal-project.sh  parse-cabal.sh  parse-corpus.sh  parse-lib.sh  valgrind-corpus.sh  validate-injections.sh
test/corpus/: fields.txt  sandi.txt
test/fixtures/: Coerce.hs
tree-sitter-cabal/: .gitignore  CMakeLists.txt  Makefile  Package.swift  go.mod  grammar.js  justfile  pnpm-lock.yaml  tree-sitter.json
tree-sitter-cabal-project/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar-utils.mjs  grammar.js  justfile  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-cabal-project/bindings/c/: tree-sitter-cabal-project.pc.in
tree-sitter-cabal-project/bindings/go/: binding.go  binding_test.go
tree-sitter-cabal-project/bindings/node/: binding.cc  index.d.ts  index.js
tree-sitter-cabal-project/bindings/python/tests/: test_binding.py
tree-sitter-cabal-project/bindings/python/tree_sitter_cabal_project/: __init__.py  binding.c
tree-sitter-cabal-project/bindings/rust/: build.rs  lib.rs
tree-sitter-cabal-project/bindings/swift/TreeSitterCabalProject/: cabal_project.h
tree-sitter-cabal-project/bindings/swift/TreeSitterCabalProjectTests/: TreeSitterCabalProjectTests.swift
tree-sitter-cabal-project/queries/: highlights.scm
tree-sitter-cabal-project/src/: grammar.json  node-types.json  parser.c  scanner.c
tree-sitter-cabal-project/test/: parse_cabal_project_corpus_test.js
tree-sitter-cabal-project/test/corpus/: conditionals.txt  fields.txt  multiline.txt  packages_list.txt  stanzas.txt  value_tokens.txt
tree-sitter-cabal/queries/: highlights.scm
tree-sitter-ghc-cmm/: grammar.js  justfile
tree-sitter-ghc-core/: grammar.js  justfile  tree-sitter.json
tree-sitter-ghc-dump/: grammar.js  justfile
tree-sitter-ghc-stg/: grammar.js  justfile
(+36 files in other folders)
